--- a/app/views/astronauts/index.html.erb
+++ b/app/views/astronauts/index.html.erb
@@ -11,6 +11,7 @@
             <li><%= mission.title %></li>
          </ul>
       <% end %>
+      <h4>Total Time in Space: <%= astronaut.missions.total_time_space %> days</h4>
    </div>
 <% end %>
 
